force-app/main/default/objects/a_obj__c/a_obj__c.object-meta.xml
<CustomObject>
    <label>a obj</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>a obj Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>a objs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>