force-app/main/default/objects/a_obj__c/fields/Account_Unique__c.field-meta.xml
<CustomField>
    <fullName>Account_Unique__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Unique Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>