force-app/main/default/objects/a_obj__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Child</label>
    <length>100</length>
    <type>Text</type>
</CustomField>