force-app/main/default/objects/a_obj__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>